# textgrab

./: .gitignore  README.md  pyproject.toml
.qt_for_python/uic/: mainwindow.py
textgrab/: __init__.py  crop_mask_item.py  mainwindow.py  mainwindow.ui  run.py  ui_mainwindow.py
