[tool.poetry]
name = "textgrab"
version = "1.0.0"
description = "Extracts text from images, screenshots, and clipboard."
authors = ["PowerSnail <hj@powersnail.com>"]
license = "GPL-2.0-only"
readme = "README.md"
homepage = "https://github.com/PowerSnail/textgrab"

[tool.poetry.dependencies]
python = "~3.9"
pytesseract = "^0.3.7"
PySide6 = "*"
docopt-ng = "^0.7.2"
Pillow = "^8.2.0"
appdirs = "^1.4.4"

[tool.poetry.scripts]
textgrab = "textgrab.run:main"

[tool.poetry.dev-dependencies]
black = "^21.5b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
exclude = "ui_.*\\.py"

